# Multi_Sensor_Fusion

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  rebuild.sh
config/: configture.ini
example_process/: data.txt
exec/: CMakeLists.txt  mscnav.cc
gnss_ins/: CMakeLists.txt
include/camera/: camera.hpp  data.hpp  feature.hpp  imageprocess.h  msckf.hpp
include/data/: navcamera.h  navdataque.h  navgnss.h  navimu.h
include/filter/: filter.h  navfilter.h
include/imu/: navinitialized.h  navmech.h
include/process/: gpsprocess.h  navstate.h
script/: evaluate_couple.py  get_all_files.sh  merge_data.py  picture_preprocess.py
src/camera/: CMakeLists.txt  imageprocess.cc  msckf.cc
src/data/: CMakeLists.txt  navcamera.cc  navdataque.cc  navgnss.cc  navimu.cc
src/filter/: CMakeLists.txt  filter.cc  navfilter.cc
src/imu/: CMakeLists.txt  navinitialized.cc  navmech.cc
src/process/: CMakeLists.txt  gpsprocess.cc  navstate.cc
test/: CMakeLists.txt  NavAlign.cc  NavCeres.cc  NavCoorChange.cc  NavFilter.cc  NavImage.cc  NavProcessing.cc  NavPureMech.cc  NavTestCamera.cc  NavTime.cc  NavdataQueue.cc  RefProcess.cc  SimDataProcess.cc  trianglePoints.cc
tools/: CMakeLists.txt  CoorTransformation.cc  CoorTransformationFile.cc  ImagePreview.cc  ImageUndistort.cc  PreprocessKittiData.cc  PrintKeypoints.cc  RawImuToImuData.cc  TimeTransformation.cc  calibration.cc  picture_preprocess.cc  preprocess_kitti_data.cc
